--- a/ScanDroidz-Android/AndroidManifest.xml
+++ b/ScanDroidz-Android/AndroidManifest.xml
@@ -4,14 +4,19 @@
     android:versionCode="1"
     android:versionName="1.0" >
 
-    <uses-sdk android:minSdkVersion="10" android:targetSdkVersion="10" />
-   	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-sdk
+        android:minSdkVersion="10"
+        android:targetSdkVersion="10" />
+
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
     <uses-permission android:name="android.permission.VIBRATE" />
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <uses-feature android:name="android.hardware.camera" />
-	<uses-feature android:name="android.hardware.camera.autofocus" />
-		 	
+    <uses-feature android:name="android.hardware.camera.autofocus" />
+
     <application
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name" >
@@ -21,10 +26,12 @@
             android:screenOrientation="landscape" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+                <action android:name="com.google.zxing.client.android.SCAN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter> 	
+            </intent-filter>
+            
         </activity>
     </application>
-    
+
 </manifest>
